ci/failover-demo/service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-07-15T17:21:49Z"
  generateName: service-blue-
  labels:
    app: bluegreen
  name: service-blue-gj466
  namespace: default
  resourceVersion: "4679"
  selfLink: /api/v1/namespaces/default/services/service-blue-gj466
  uid: 5ac5f937-6214-4056-90a8-2500eaa8c18b
spec:
  clusterIP: 10.96.10.40
  ports:
  - name: color
    port: 10000
    protocol: TCP
    targetPort: 10000
  selector:
    app: bluegreen
    text: blue
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
