ci/failover-demo/simple-route.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: simple-route-sdfjg
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-service-blue
            namespace: gloo-system
